[package]
name = "hecate"
version = "0.1.0"
authors = ["Raphael O. <raphael.ob@protonmail.com>"]
description = "Implementation of an ARM Cortex-A9 JIT CPU Compiler"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Anubis-rs/Anubis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
